add style for header site

--- a/excercises/aboutme/index.html
+++ b/excercises/aboutme/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
+    <header class="site-header">
         <h1>Marcin Bogucki</h1>
     </header>
     <main>
@@ -39,7 +39,7 @@
             consectetur delectus facilis molestias mollitia neque non nostrum nulla officia porro provident quis
             recusandae reiciendis repellat similique, ut vero!</p>
     </main>
-    <footer>
+    <footer class="site-footer">
         <p>Copyright &copy; 2016</p>
     </footer>
 </body>
