add footer style

--- a/excercises/aboutme/index.html
+++ b/excercises/aboutme/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>O mnie</title>
+    <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -41,6 +42,11 @@
     </main>
     <footer class="site-footer">
         <p>Copyright &copy; 2016</p>
+        <ul class="social-icon">
+            <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+            <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+            <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+        </ul>
     </footer>
 </body>
 </html>
