add picture to index

--- a/excercises/aboutme/index.html
+++ b/excercises/aboutme/index.html
@@ -10,6 +10,7 @@
         <h1>Marcin Bogucki</h1>
     </header>
     <main>
+        <figure class="site-banner" style="background-image: url('https://static.pexels.com/photos/28462/pexels-photo-28462-large.jpg');"></figure>
         <h2>O mnie</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex fugiat laboriosam quibusdam. Dicta, dolorum est
             et excepturi obcaecati rem tempora? A, architecto at corporis cupiditate dolorem dolores enim esse excepturi
