--- a/excercises/aboutme/index.html
+++ b/excercises/aboutme/index.html
@@ -11,34 +11,32 @@
     </header>
     <main>
         <figure class="site-banner" style="background-image: url('https://static.pexels.com/photos/28462/pexels-photo-28462-large.jpg');"></figure>
-        <h2>O mnie</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex fugiat laboriosam quibusdam. Dicta, dolorum est
-            et excepturi obcaecati rem tempora? A, architecto at corporis cupiditate dolorem dolores enim esse excepturi
-            facere, facilis fuga fugit illo ipsum iure laudantium maxime nemo nesciunt nulla odit, omnis perferendis
-            rerum sed tempore ullam velit.</p>
+        <section class="text-page">
+            <h2>O mnie</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex fugiat laboriosam quibusdam. Dicta, dolorum est
+                et excepturi obcaecati rem tempora? A, architecto at corporis cupiditate dolorem dolores enim esse excepturi
+                facere, facilis fuga fugit illo ipsum iure laudantium maxime nemo nesciunt nulla odit, omnis perferendis
+                rerum sed tempore ullam velit.</p>
 
-        <ul>
-            <li>Lorem ipsum dolor sit amet, consectetur adipisicing.</li>
-            <li>Debitis est explicabo libero perferendis sapiente voluptatum!</li>
-            <li>Deleniti enim eum fuga fugiat inventore nesciunt?</li>
-        </ul>
+            <ul>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing.</li>
+                <li>Debitis est explicabo libero perferendis sapiente voluptatum!</li>
+                <li>Deleniti enim eum fuga fugiat inventore nesciunt?</li>
+            </ul>
 
-        <p>Animi asperiores aspernatur at commodi consectetur, culpa debitis deleniti deserunt, harum ipsum laudantium
-            molestiae numquam omnis perferendis quaerat quasi, rerum? Architecto consequuntur dolores ducimus ipsa ipsum
-            perspiciatis, quae quam quas quod ullam. Aliquid consequuntur ea eaque, et incidunt inventore libero
-            mollitia neque nulla possimus temporibus veritatis voluptate? Corporis, ex quo.</p>
 
-        <ol>
-            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-            <li>Accusamus adipisci atque cumque labore minus perferendis totam?</li>
-            <li>Autem deleniti doloremque eos, magnam molestiae nostrum velit!</li>
-            <li>A ad aperiam asperiores fugit numquam tempore vero?</li>
-        </ol>
+            <ol>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+                <li>Accusamus adipisci atque cumque labore minus perferendis totam?</li>
+                <li>Autem deleniti doloremque eos, magnam molestiae nostrum velit!</li>
+                <li>A ad aperiam asperiores fugit numquam tempore vero?</li>
+            </ol>
 
-        <p>Amet aut beatae cupiditate deleniti distinctio facere, iste iure nam quae recusandae! Assumenda atque aut cum
-            cumque dolore error in labore laboriosam maxime nostrum nulla quibusdam quis, ratione sit ullam. Autem
-            consectetur delectus facilis molestias mollitia neque non nostrum nulla officia porro provident quis
-            recusandae reiciendis repellat similique, ut vero!</p>
+            <p>Amet aut beatae cupiditate deleniti distinctio facere, iste iure nam quae recusandae! Assumenda atque aut cum
+                cumque dolore error in labore laboriosam maxime nostrum nulla quibusdam quis, ratione sit ullam. Autem
+                consectetur delectus facilis molestias mollitia neque non nostrum nulla officia porro provident quis
+                recusandae reiciendis repellat similique, ut vero!</p>
+            </section>
     </main>
     <footer class="site-footer">
         <p>Copyright &copy; 2016</p>
