--- a/excercises/aboutme/index.html
+++ b/excercises/aboutme/index.html
@@ -5,7 +5,7 @@
     <title>O mnie</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="site">
     <header class="site-header">
         <h1>Marcin Bogucki</h1>
     </header>
