add mini parallax

--- a/excercises/aboutme/index.html
+++ b/excercises/aboutme/index.html
@@ -25,6 +25,16 @@
             </ul>
 
 
+            <p>Amet aut beatae cupiditate deleniti distinctio facere, iste iure nam quae recusandae! Assumenda atque aut cum
+                cumque dolore error in labore laboriosam maxime nostrum nulla quibusdam quis, ratione sit ullam. Autem
+                consectetur delectus facilis molestias mollitia neque non nostrum nulla officia porro provident quis
+                recusandae reiciendis repellat similique, ut vero!</p>
+
+            <p>Amet aut beatae cupiditate deleniti distinctio facere, iste iure nam quae recusandae! Assumenda atque aut cum
+                cumque dolore error in labore laboriosam maxime nostrum nulla quibusdam quis, ratione sit ullam. Autem
+                consectetur delectus facilis molestias mollitia neque non nostrum nulla officia porro provident quis
+                recusandae reiciendis repellat similique, ut vero!</p>
+
             <ol>
                 <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
                 <li>Accusamus adipisci atque cumque labore minus perferendis totam?</li>
