--- a/excercises/aboutme/index.html
+++ b/excercises/aboutme/index.html
@@ -51,9 +51,9 @@
     <footer class="site-footer">
         <p>Copyright &copy; 2016</p>
         <ul class="social-icon">
-            <li><a href="#"><img src="images/icon-fb.svg" alt="Facebook"></a></li>
-            <li><a href="#"><img src="images/icon-lin.svg" alt="Linked In"></a></li>
-            <li><a href="#"><img src="images/icon-twitter.svg" alt="Twitter"></a></li>
+            <li><a href="#" class="icon-fb"></a></li>
+            <li><a href="#" class="icon-lin"></a></li>
+            <li><a href="#" class="icon-twitter"></a></li>
         </ul>
     </footer>
 </body>
