--- a/excercises/first-website/index.html
+++ b/excercises/first-website/index.html
@@ -8,47 +8,48 @@
 </head>
 <body>
 
+    <figure class="container-inside">
+        <img src="https://images.unsplash.com/photo-1464822759023-fed622ff2c3b" alt="" style="width: 100%; height: 200px;">
+    </figure>
 
-    <asside class="site-links">
-        <div class="grid container-inside">
-            <div class="col-1-2 col-1-4">
-                <ul>
-                    <li><h3>Follow Us</h3></li>
-                    <li><a href="#">Twitter</a></li>
-                    <li><a href="#">Facebook</a></li>
-                    <li><a href="#">Linkedin</a></li>
-                    <li><a href="#">Pinterest</a></li>
-                    <li><a href="#">YouTube</a></li>
-                </ul>
-            </div>
-            <div class="col-1-2 col-1-4">
-                <ul>
-                    <li><h3>Get To Know Us</h3></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Policies</a></li>
-                    <li><a href="#">Careers</a></li>
-                    <li><a href="#">Press</a></li>
-                    <li><a href="#">Developers</a></li>
-                </ul>
-            </div>
-            <div class="col-1-2 col-1-4">
-                <ul>
-                    <li><h3>Locations</h3></li>
-                    <li><a href="#">Detroit</a></li>
-                    <li><a href="#">London</a></li>
-                    <li><a href="#">Florida</a></li>
-                    <li><a href="#">Las Vegas</a></li>
-                    <li><a href="#">California</a></li>
-                </ul>
-            </div>
-            <div class="col-1-2 col-1-4">
-                <article>
-                    <h3>Our Mission</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda at dolores earum enim, esse
-                        inventore, iure maiores molestias nesciunt quasi qui repellat repellendus sit tempore, unde vel! At
-                        deserunt esse est eum id odit quae reiciendis. Consequuntur, illum, quaerat?</p>
-                </article>
-            </div>
+    <asside class="site-links grid container-inside">
+        <div class="col-1-4">
+            <ul>
+                <li><h3>Follow Us</h3></li>
+                <li><a href="#">Twitter</a></li>
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">Linkedin</a></li>
+                <li><a href="#">Pinterest</a></li>
+                <li><a href="#">YouTube</a></li>
+            </ul>
+        </div>
+        <div class="col-1-4">
+            <ul>
+                <li><h3>Get To Know Us</h3></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Policies</a></li>
+                <li><a href="#">Careers</a></li>
+                <li><a href="#">Press</a></li>
+                <li><a href="#">Developers</a></li>
+            </ul>
+        </div>
+        <div class="col-1-4">
+            <ul>
+                <li><h3>Locations</h3></li>
+                <li><a href="#">Detroit</a></li>
+                <li><a href="#">London</a></li>
+                <li><a href="#">Florida</a></li>
+                <li><a href="#">Las Vegas</a></li>
+                <li><a href="#">California</a></li>
+            </ul>
+        </div>
+        <div class="col-1-4">
+            <article>
+                <h3>Our Mission</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda at dolores earum enim, esse
+                    inventore, iure maiores molestias nesciunt quasi qui repellat repellendus sit tempore, unde vel! At
+                    deserunt esse est eum id odit quae reiciendis. Consequuntur, illum, quaerat?</p>
+            </article>
         </div>
     </asside>
 
