--- a/excercises/first-website/index.html
+++ b/excercises/first-website/index.html
@@ -8,6 +8,28 @@
 </head>
 <body>
 
+    <section class="photos-article grid">
+        <div class="col-1-4">
+            <a href="#">
+                <figure style="background-image: url('https://static.pexels.com/photos/230/landscape-nature-forest-trees.jpg');"></figure>
+            </a>
+        </div>
+        <div class="col-1-4">
+            <a href="#">
+                <figure style="background-image: url('https://static.pexels.com/photos/1562/italian-landscape-mountains-nature.jpg');"></figure>
+            </a>
+        </div>
+        <div class="col-1-4">
+            <a href="#">
+                <figure style="background-image: url('https://static.pexels.com/photos/58685/pexels-photo-58685.jpeg');"></figure>
+            </a>
+        </div>
+        <div class="col-1-4">
+            <a href="#">
+                <figure style="background-image: url('https://static.pexels.com/photos/58680/pexels-photo-58680.jpeg');"></figure>
+            </a>
+        </div>
+    </section>
 
     <asside class="site-links grid container-inside">
         <div class="col-1-4">
