--- a/excercises/aboutme/index.html
+++ b/excercises/aboutme/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="site">
     <header class="site-header">
-        <h1>Marcin Bogucki</h1>
+        <h1 class="logo">Marcin Bogucki</h1>
     </header>
     <main>
         <figure class="site-banner" style="background-image: url('https://static.pexels.com/photos/28462/pexels-photo-28462-large.jpg');"></figure>
@@ -72,11 +72,11 @@
             </section>
     </main>
     <footer class="site-footer">
-        <p>Copyright &copy; 2016</p>
+        <p class="copyright">Copyright &copy; 2016</p>
         <ul class="social-icon">
-            <li><a href="#" class="icon-fb"></a></li>
-            <li><a href="#" class="icon-lin"></a></li>
-            <li><a href="#" class="icon-twitter"></a></li>
+            <li class="icon-item"><a href="#" class="icon icon-fb"></a></li>
+            <li class="icon-item"><a href="#" class="icon icon-lin"></a></li>
+            <li class="icon-item"><a href="#" class="icon icon-twitter"></a></li>
         </ul>
     </footer>
 </body>
