--- a/excercises/aboutme/index.html
+++ b/excercises/aboutme/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>O mnie</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Galada|Slabo+27px&subset=latin-ext" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -43,32 +44,32 @@
                 <li>A ad aperiam asperiores fugit numquam tempore vero?</li>
             </ol>
 
-            <p>Amet aut beatae cupiditate deleniti distinctio facere, iste iure nam quae recusandae! Assumenda atque aut cum
-                cumque dolore error in labore laboriosam maxime nostrum nulla quibusdam quis, ratione sit ullam. Autem
-                consectetur delectus facilis molestias mollitia neque non nostrum nulla officia porro provident quis
-                recusandae reiciendis repellat similique, ut vero!</p>
+            <!--<p>Amet aut beatae cupiditate deleniti distinctio facere, iste iure nam quae recusandae! Assumenda atque aut cum-->
+                <!--cumque dolore error in labore laboriosam maxime nostrum nulla quibusdam quis, ratione sit ullam. Autem-->
+                <!--consectetur delectus facilis molestias mollitia neque non nostrum nulla officia porro provident quis-->
+                <!--recusandae reiciendis repellat similique, ut vero!</p>-->
 
-            <p>Amet aut beatae cupiditate deleniti distinctio facere, iste iure nam quae recusandae! Assumenda atque aut cum
-                cumque dolore error in labore laboriosam maxime nostrum nulla quibusdam quis, ratione sit ullam. Autem
-                consectetur delectus facilis molestias mollitia neque non nostrum nulla officia porro provident quis
-                recusandae reiciendis repellat similique, ut vero!</p>
+            <!--<p>Amet aut beatae cupiditate deleniti distinctio facere, iste iure nam quae recusandae! Assumenda atque aut cum-->
+                <!--cumque dolore error in labore laboriosam maxime nostrum nulla quibusdam quis, ratione sit ullam. Autem-->
+                <!--consectetur delectus facilis molestias mollitia neque non nostrum nulla officia porro provident quis-->
+                <!--recusandae reiciendis repellat similique, ut vero!</p>-->
 
-            <p>Amet aut beatae cupiditate deleniti distinctio facere, iste iure nam quae recusandae! Assumenda atque aut cum
-                cumque dolore error in labore laboriosam maxime nostrum nulla quibusdam quis, ratione sit ullam. Autem
-                consectetur delectus facilis molestias mollitia neque non nostrum nulla officia porro provident quis
-                recusandae reiciendis repellat similique, ut vero!</p>
+            <!--<p>Amet aut beatae cupiditate deleniti distinctio facere, iste iure nam quae recusandae! Assumenda atque aut cum-->
+                <!--cumque dolore error in labore laboriosam maxime nostrum nulla quibusdam quis, ratione sit ullam. Autem-->
+                <!--consectetur delectus facilis molestias mollitia neque non nostrum nulla officia porro provident quis-->
+                <!--recusandae reiciendis repellat similique, ut vero!</p>-->
 
-            <ol>
-                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-                <li>Accusamus adipisci atque cumque labore minus perferendis totam?</li>
-                <li>Autem deleniti doloremque eos, magnam molestiae nostrum velit!</li>
-                <li>A ad aperiam asperiores fugit numquam tempore vero?</li>
-            </ol>
+            <!--<ol>-->
+                <!--<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>-->
+                <!--<li>Accusamus adipisci atque cumque labore minus perferendis totam?</li>-->
+                <!--<li>Autem deleniti doloremque eos, magnam molestiae nostrum velit!</li>-->
+                <!--<li>A ad aperiam asperiores fugit numquam tempore vero?</li>-->
+            <!--</ol>-->
 
-            <p>Amet aut beatae cupiditate deleniti distinctio facere, iste iure nam quae recusandae! Assumenda atque aut cum
-                cumque dolore error in labore laboriosam maxime nostrum nulla quibusdam quis, ratione sit ullam. Autem
-                consectetur delectus facilis molestias mollitia neque non nostrum nulla officia porro provident quis
-                recusandae reiciendis repellat similique, ut vero!</p>
+            <!--<p>Amet aut beatae cupiditate deleniti distinctio facere, iste iure nam quae recusandae! Assumenda atque aut cum-->
+                <!--cumque dolore error in labore laboriosam maxime nostrum nulla quibusdam quis, ratione sit ullam. Autem-->
+                <!--consectetur delectus facilis molestias mollitia neque non nostrum nulla officia porro provident quis-->
+                <!--recusandae reiciendis repellat similique, ut vero!</p>-->
             </section>
     </main>
     <footer class="site-footer">
