--- a/excercises/first-website/index.html
+++ b/excercises/first-website/index.html
@@ -31,7 +31,7 @@
         </div>
     </section>
 
-    <asside class="site-links grid container-inside">
+    <aside class="site-links grid container-inside">
         <div class="col-1-4">
             <ul>
                 <li><h3>Follow Us</h3></li>
@@ -70,7 +70,7 @@
                     deserunt esse est eum id odit quae reiciendis. Consequuntur, illum, quaerat?</p>
             </article>
         </div>
-    </asside>
+    </aside>
 
     <footer class="site-footer">
         <p>Copyright &copy; 2016 &commat;samiralley</p>
