--- a/excercises/my-first-website/index.html
+++ b/excercises/my-first-website/index.html
@@ -3,8 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Web Design</title>
+    <link href='https://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic|Amiko:400,600,700|Merriweather:400,300,300italic,400italic,700,700italic,900&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+    <header class="site-header">
+        <nav class="site-navigation">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+
+        <article class="intro">
+            <h1>Web Design</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam ea eveniet iure minima, omnis rem sequi ut. Deserunt expedita magnam nobis.</p>
+            <span class="link"><a href="#">Really?</a></span>
+        </article>
+    </header>
 
 </body>
 </html>
