--- a/excercises/my-first-website/index.html
+++ b/excercises/my-first-website/index.html
@@ -9,6 +9,13 @@
 <body>
 
     <header class="site-header">
+
+        <div class="container">
+            <h2 class="logo">
+                <a href="#"><img src="images/logo.svg" alt="Web Design"></a>
+            </h2>
+        </div>
+
         <nav class="site-navigation">
             <ul>
                 <li><a href="#">Home</a></li>
