--- a/excercises/my-first-website/index.html
+++ b/excercises/my-first-website/index.html
@@ -14,6 +14,11 @@
             <h2 class="logo">
                 <a href="#"><img src="images/logo.svg" alt="Web Design"></a>
             </h2>
+
+            <ul class="navigation-search">
+                <li class="search"><a href="#">search</a></li>
+                <li class="menu"><a href="#">Nav</a></li>
+            </ul>
         </div>
 
         <nav class="site-navigation">
