--- a/excercises/my-first-website/index.html
+++ b/excercises/my-first-website/index.html
@@ -8,19 +8,22 @@
 </head>
 <body>
 
+    <!-- header -->
     <header class="site-header">
-
         <div class="container">
+            <!-- logo -->
             <h2 class="logo">
                 <a href="#"><img src="images/logo.svg" alt="Web Design"></a>
             </h2>
 
+            <!-- search + menu -->
             <ul class="navigation-search">
                 <li class="search"><a href="#">search</a></li>
                 <li class="menu"><a href="#">Nav</a></li>
             </ul>
         </div>
 
+        <!-- main nav -->
         <nav class="site-navigation">
             <ul>
                 <li><a href="#">Home</a></li>
@@ -29,6 +32,7 @@
             </ul>
         </nav>
 
+        <!-- main article -->
         <article class="intro">
             <h1>Web Design</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam ea eveniet iure minima, omnis rem sequi ut. Deserunt expedita magnam nobis.</p>
