--- a/excercises/my-first-website/index.html
+++ b/excercises/my-first-website/index.html
@@ -38,6 +38,8 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam ea eveniet iure minima, omnis rem sequi ut. Deserunt expedita magnam nobis.</p>
             <span class="link"><a href="#">Really?</a></span>
         </article>
+
+        <a href="#" class="link-play">play</a>
     </header>
 
 </body>
