add comment to index

--- a/excercises/my-first-website/index.html
+++ b/excercises/my-first-website/index.html
@@ -39,6 +39,7 @@
             <span class="link"><a href="#">Really?</a></span>
         </article>
 
+        <!-- play -->
         <a href="#" class="link-play">play</a>
     </header>
 
