update adjustments and add section places

--- a/excercises/my-first-website/index.html
+++ b/excercises/my-first-website/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Web Design</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic|Amiko:400,600,700|Merriweather:400,300,300italic,400italic,700,700italic,900&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
     <!-- header -->
     <header class="site-header">
         <div class="container">
@@ -34,14 +34,47 @@
 
         <!-- main article -->
         <article class="intro">
-            <h1>Web Design</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam ea eveniet iure minima, omnis rem sequi ut. Deserunt expedita magnam nobis.</p>
-            <span class="link"><a href="#">Really?</a></span>
+            <h1 class="intro__heading">Web Design</h1>
+            <p class="intro__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam ea eveniet iure minima, omnis rem sequi ut. Deserunt expedita magnam nobis.</p>
+            <span class="intro__link"><a href="#">Really?</a></span>
         </article>
 
         <!-- play -->
-        <a href="#" class="link-play">play</a>
-    </header>
+        <button type="button" class="link-play">play</button>
+    </header><!-- /header -->
 
+    <!-- main -->
+    <main>
+        <!-- picture places -->
+        <section class="places">
+            <article class="place place-01">
+                <div class="place-heading">
+                    <h2>Lorem ipsum.</h2>
+                    <em>Lorem.</em>
+                </div>
+            </article>
+
+            <article class="place place-02">
+                <div class="place-heading">
+                    <h2>Dignissimos, itaque.</h2>
+                    <em>Quam!</em>
+                </div>
+            </article>
+
+            <article class="place place-03">
+                <div class="place-heading">
+                    <h2>Aliquam, at.</h2>
+                    <em>Corporis.</em>
+                </div>
+            </article>
+
+            <article class="place place-04">
+                <div class="place-heading">
+                    <h2>Doloremque, doloribus!</h2>
+                    <em>Velit.</em>
+                </div>
+            </article>
+        </section><!-- /picture places -->
+    </main><!-- /main -->
 </body>
 </html>
