add footer and section links + mixins flex

--- a/excercises/my-first-website/index.html
+++ b/excercises/my-first-website/index.html
@@ -12,9 +12,9 @@
     <header class="site-header">
         <div class="container">
             <!-- logo -->
-            <h2 class="logo">
+            <h1 class="logo">
                 <a href="#"><img src="images/logo.svg" alt="Web Design"></a>
-            </h2>
+            </h1>
 
             <!-- search + menu -->
             <ul class="navigation-search">
@@ -34,7 +34,7 @@
 
         <!-- main article -->
         <article class="intro">
-            <h1 class="intro__heading">Web Design</h1>
+            <h2 class="intro__heading">Web Design</h2>
             <p class="intro__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam ea eveniet iure minima, omnis rem sequi ut. Deserunt expedita magnam nobis.</p>
             <span class="intro__link"><a href="#">Really?</a></span>
         </article>
@@ -50,31 +50,71 @@
             <article class="place place-01">
                 <div class="place-heading">
                     <h2>Lorem ipsum.</h2>
-                    <em>Lorem.</em>
+                    <p>Lorem.</p>
                 </div>
             </article>
 
             <article class="place place-02">
                 <div class="place-heading">
                     <h2>Dignissimos, itaque.</h2>
-                    <em>Quam!</em>
+                    <p>Quam!</p>
                 </div>
             </article>
 
             <article class="place place-03">
                 <div class="place-heading">
                     <h2>Aliquam, at.</h2>
-                    <em>Corporis.</em>
+                    <p>Corporis.</p>
                 </div>
             </article>
 
             <article class="place place-04">
                 <div class="place-heading">
                     <h2>Doloremque, doloribus!</h2>
-                    <em>Velit.</em>
+                    <p>Velit.</p>
                 </div>
             </article>
         </section><!-- /picture places -->
+
+        <!-- links -->
+        <section class="links container">
+            <ul class="links-box">
+                <li class="links-box__heading"><h2>Follow us</h2></li>
+                <li class="links-box__url"><a href="#">Twitter</a></li>
+                <li class="links-box__url"><a href="#">Facebook</a></li>
+                <li class="links-box__url"><a href="#">Linkedin</a></li>
+                <li class="links-box__url"><a href="#">Pinterest</a></li>
+                <li class="links-box__url"><a href="#">YouTube</a></li>
+            </ul>
+            
+            <ul class="links-box">
+                <li class="links-box__heading"><h2>Get to knwo us</h2></li>
+                <li class="links-box__url"><a href="#">About</a></li>
+                <li class="links-box__url"><a href="#">Policies</a></li>
+                <li class="links-box__url"><a href="#">Careers</a></li>
+                <li class="links-box__url"><a href="#">Press</a></li>
+                <li class="links-box__url"><a href="#">Developers</a></li>
+            </ul>
+            
+            <ul class="links-box">
+                <li class="links-box__heading"><h2>Locations</h2></li>
+                <li class="links-box__url"><a href="#">Detroit</a></li>
+                <li class="links-box__url"><a href="#">London</a></li>
+                <li class="links-box__url"><a href="#">Florida</a></li>
+                <li class="links-box__url"><a href="#">Las Vegas</a></li>
+                <li class="links-box__url"><a href="#">California</a></li>
+            </ul>
+
+            <ul class="links-box">
+                <li class="links-box__heading"><h2>Our Mission</h2></li>
+                <li class="links-box__info"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At blanditiis commodi debitis deserunt enim, ipsa iste mollitia neque, non officia porro, provident quaerat quasi reiciendis sapiente similique tempora voluptas. Laborum?</p></li>
+            </ul>
+        </section>
+        <!-- /links -->
     </main><!-- /main -->
+
+    <footer class="site-footer">
+        <p class="site-footer__copyright">Copyright &copy; 2016 &#64;samiralley</p>
+    </footer>
 </body>
 </html>
