--- a/excercises/my-first-website/index.html
+++ b/excercises/my-first-website/index.html
@@ -33,11 +33,11 @@
         </nav>
 
         <!-- main article -->
-        <article class="intro">
+        <div class="intro">
             <h2 class="intro__heading">Web Design</h2>
             <p class="intro__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam ea eveniet iure minima, omnis rem sequi ut. Deserunt expedita magnam nobis.</p>
-            <span class="intro__link"><a href="#">Really?</a></span>
-        </article>
+            <a href="#" class="intro__link">Really?</a>
+        </div>
 
         <!-- play -->
         <button type="button" class="link-play">play</button>
@@ -46,58 +46,53 @@
     <!-- main -->
     <main>
         <!-- picture places -->
-        <section class="places">
+        <div class="places">
             <article class="place place-01">
-                <div class="place-heading">
-                    <h2>Lorem ipsum.</h2>
-                    <p>Lorem.</p>
-                </div>
+                <h3 class="place__heading">Lorem ipsum.</h3>
+                <p class="place__text">Lorem.</p>
             </article>
 
             <article class="place place-02">
-                <div class="place-heading">
-                    <h2>Dignissimos, itaque.</h2>
-                    <p>Quam!</p>
-                </div>
+                <h3 class="place__heading">Dignissimos, itaque.</h3>
+                <p class="place__text">Quam!</p>
             </article>
 
             <article class="place place-03">
-                <div class="place-heading">
-                    <h2>Aliquam, at.</h2>
-                    <p>Corporis.</p>
-                </div>
+                <h3 class="place__heading">Aliquam, at.</h3>
+                <p class="place__text">Corporis.</p>
             </article>
 
             <article class="place place-04">
-                <div class="place-heading">
-                    <h2>Doloremque, doloribus!</h2>
-                    <p>Velit.</p>
-                </div>
+                <h3 class="place__heading">Doloremque, doloribus!</h3>
+                <p class="place__text">Velit.</p>
             </article>
-        </section><!-- /picture places -->
+        </div><!-- /picture places -->
+    </main><!-- /main -->
 
+    <!-- footer -->
+    <footer class="site-footer">
         <!-- links -->
-        <section class="links container">
+        <header class="links container">
             <ul class="links-box">
-                <li class="links-box__heading"><h2>Follow us</h2></li>
+                <li class="links-box__heading"><h3>Follow us</h3></li>
                 <li class="links-box__url"><a href="#">Twitter</a></li>
                 <li class="links-box__url"><a href="#">Facebook</a></li>
                 <li class="links-box__url"><a href="#">Linkedin</a></li>
                 <li class="links-box__url"><a href="#">Pinterest</a></li>
                 <li class="links-box__url"><a href="#">YouTube</a></li>
             </ul>
-            
+
             <ul class="links-box">
-                <li class="links-box__heading"><h2>Get to knwo us</h2></li>
+                <li class="links-box__heading"><h3>Get to knwo us</h3></li>
                 <li class="links-box__url"><a href="#">About</a></li>
                 <li class="links-box__url"><a href="#">Policies</a></li>
                 <li class="links-box__url"><a href="#">Careers</a></li>
                 <li class="links-box__url"><a href="#">Press</a></li>
                 <li class="links-box__url"><a href="#">Developers</a></li>
             </ul>
-            
+
             <ul class="links-box">
-                <li class="links-box__heading"><h2>Locations</h2></li>
+                <li class="links-box__heading"><h3>Locations</h3></li>
                 <li class="links-box__url"><a href="#">Detroit</a></li>
                 <li class="links-box__url"><a href="#">London</a></li>
                 <li class="links-box__url"><a href="#">Florida</a></li>
@@ -106,15 +101,14 @@
             </ul>
 
             <ul class="links-box">
-                <li class="links-box__heading"><h2>Our Mission</h2></li>
+                <li class="links-box__heading"><h3>Our Mission</h3></li>
                 <li class="links-box__info"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At blanditiis commodi debitis deserunt enim, ipsa iste mollitia neque, non officia porro, provident quaerat quasi reiciendis sapiente similique tempora voluptas. Laborum?</p></li>
             </ul>
-        </section>
+        </header>
         <!-- /links -->
-    </main><!-- /main -->
 
-    <footer class="site-footer">
+        <!-- copyright -->
         <p class="site-footer__copyright">Copyright &copy; 2016 &#64;samiralley</p>
-    </footer>
+    </footer><!-- /footer -->
 </body>
 </html>
