update structure html

--- a/excercises/black-and-white/index.html
+++ b/excercises/black-and-white/index.html
@@ -62,36 +62,36 @@
             <h2 class="f-articles__heading">Read some of our featured articles</h2>
 
             <!-- box articles -->
-            <div class="f-articles__box">
+            <article class="f-articles__box">
                 <a href="#" class="f-articles__box-link">
                     <span class="f-articles__like">172</span>
                     <p class="f-articles__event"><time>Januari'15</time> <b>South France</b></p>
                 </a>
-            </div>
+            </article>
 
             <!-- box articles -->
-            <div class="f-articles__box">
+            <article class="f-articles__box">
                 <a href="#" class="f-articles__box-link">
                     <span class="f-articles__like">172</span>
                     <p class="f-articles__event"><time>Januari'15</time> <b>Budapest</b></p>
                 </a>
-            </div>
+            </article>
 
             <!-- box articles -->
-            <div class="f-articles__box">
+            <article class="f-articles__box">
                 <a href="#" class="f-articles__box-link">
                     <span class="f-articles__like">172</span>
                     <p class="f-articles__event"><time>Januari'15</time> <b>Scotland</b></p>
                 </a>
-            </div>
+            </article>
 
             <!-- box articles -->
-            <div class="f-articles__box">
+            <article class="f-articles__box">
                 <a href="#" class="f-articles__box-link">
                     <span class="f-articles__like">172</span>
                     <p class="f-articles__event"><time>Januari'15</time> <b>South America</b></p>
                 </a>
-            </div>
+            </article>
         </section><!-- /featured articles -->
 
         <!-- newsletter -->
@@ -109,14 +109,14 @@
         <!-- info -->
         <div class="site-footer__info">
             <!-- box info -->
-            <div class="site-footer__box">
+            <div class="info-box">
                 <h2 class="info-box__heading">Black &amp; White</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, est labore officiis omnis qui similique!</p>
             </div>
 
             <!-- box info -->
-            <div class="site-footer__box info-box">
-                <h2 class="info-box__heading">Contact</h2>
+            <div class="info-box address-box">
+                <h2 class="address-box__heading">Contact</h2>
                 <p><a href="#">www.loremipsumdolar.nk</a></p>
                 <p>182 AB YOur Street Name</p>
                 <p><a href="#">e-mail@loremipsum.com</a></p>
@@ -124,14 +124,14 @@
             </div>
 
             <!-- box info -->
-            <div class="site-footer__box info-box">
+            <article class="info-box">
                 <h2 class="info-box__heading">Latest Tweet</h2>
                 <p><i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, officia.</i></p>
                 <time>3 hour ago</time>
-            </div>
+            </article>
 
             <!-- box info -->
-            <div class="site-footer__box info-box">
+            <div class="info-box">
                 <h2 class="info-box__heading">Newsletter</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, officia.</p>
                 <form class="newsletter__form">
